animation showInfo finish

--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -1,4 +1,5 @@
 @import '../centerScreen.scss';
+@import './commingSoon/commingSoon.scss';
 #homePage{
-    background-color: red;
+    @include commingSoon;
 }
