--- a/src/styles/nav/nav.scss
+++ b/src/styles/nav/nav.scss
@@ -1,5 +1,6 @@
 @import '../variables.scss';
 header{
+    top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,6 +10,7 @@ header{
     width: 100vw;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 1000;
     ul{
         list-style-type: none;
     }
@@ -103,6 +105,7 @@ header{
             li{
                 min-width: max-content;
                 margin-bottom: 0;
+                // color: $seColor;
                 h2{
                     margin-right: 20px;
                 }
