--- a/src/styles/home/commingSoon/showInfo.scss
+++ b/src/styles/home/commingSoon/showInfo.scss
@@ -1,3 +1,4 @@
+@import '../../variables.scss';
 @mixin showInfo {
     height: 100%;
     min-width: 100%;
@@ -18,7 +19,51 @@
         list-style-type: none;
         li{
             padding: 5px 10px;
-            border-radius: 10px;
+            border-radius: 5px;
+            margin-right: 5px;
+
         }
+    }
+    .buttons{
+        display: flex;
+        margin: 10px 0;
+        li{
+            display: flex;
+            align-items: center;
+            color: $secondaryColor;
+            margin-right: 10px;
+            i{
+                border: 3px solid $secondaryColor;
+                padding: 7px;
+                margin-right: 5px;
+                font-size: 10px;
+                border-radius: 20px;
+            }
+        }
+    }
+    .shortInfo{
+        list-style-type: circle;
+        margin-bottom: 20px;
+        .rating{
+            font-size: 16px;
+        }
+        li{
+            margin-right: 50px;
+            font-size: 12px;
+        }
+    }
+    .moreDetails{
+        background-color: $secondaryColor;
+        width: 50%;
+        min-width: 200px;
+        padding: 10px;
+        color: $quarternaryColor;
+        font-weight: bolder;
+        margin: 0 !important;
+        border: none;
+        outline: none;
+        border-radius: 20px;
+
+
     }
 }
