fix slideshow clearing timeout

--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -1,5 +1,5 @@
 @import '../centerScreen.scss';
-@import './commingSoon/commingSoon.scss';
+@import './trending/trending.scss';
 #homePage{
-    @include commingSoon;
+    @include trending;
 }
