--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $primaryColor : #162d2f;
 $secondaryColor : #16bbac;
 $tertiaryColor : #191e24;
-$quarternaryColor : white
+$quarternaryColor : white;
+$quinaryColor : #fac43c
