--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,23 @@ code {
 
 section{
   max-width: 1080px;
-  width: 100vw;
+  width: 100%;
   margin: auto;
+}
+
+button{
+  cursor: pointer;
+}
+
+body::-webkit-scrollbar{
+  background-color: #162d2f;
+  height: 10px;
+  border-radius: 20px;
+  width: 5px;
+}
+body::-webkit-scrollbar-thumb{
+  background-color: #16bbac;
+  border-radius: 20px;
+  
+
 }
