fixed slideshow again

--- a/src/styles/home/trending/showInfo.scss
+++ b/src/styles/home/trending/showInfo.scss
@@ -74,6 +74,9 @@
         border: none;
         outline: none;
         border-radius: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
 
     }
