--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #191e24;
+  
 }
 
 *{
@@ -19,7 +20,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+.App{
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
+}
 section{
   max-width: 1080px;
   width: 100%;
@@ -31,7 +36,7 @@ button{
 }
 
 body::-webkit-scrollbar{
-  background-color: #162d2f;
+  background-color: #191e24;
   height: 10px;
   border-radius: 20px;
   width: 5px;
