get movie detail information

--- a/src/styles/details/detailHeader.scss
+++ b/src/styles/details/detailHeader.scss
@@ -27,8 +27,7 @@
     }
     .showTitle{
         img{
-            width: 70%;
-            min-width: 100px;
+            max-width: 150px;
         }
         h1{
             font-size: 40px;
