finish movie details

--- a/src/styles/details/detailHeader.scss
+++ b/src/styles/details/detailHeader.scss
@@ -33,11 +33,16 @@
             font-size: 40px;
             
         }
+        .tagline{
+            font-style: italic;
+        }
         ul{
             list-style-type: none;
             display: flex;
             li{
                 margin-right: 10px;
+                padding: 10px;
+                border-radius: 12px;
             }
         }
     }
