--- a/src/styles/details/overview_reviews.scss
+++ b/src/styles/details/overview_reviews.scss
@@ -1,35 +1,104 @@
 @import '../variables.scss';
 
 @mixin overview_reviews{
-    display: flex;
-    flex-direction: column;
-    .overview{
-        
-        .addFav{
-            color: $secondaryColor;
-            padding: 10px;
-            border: 1px solid $secondaryColor;
-            border-radius: 13px;
-            display: flex;
-            align-items: center;
-            width: 40%;
-            i{
-                margin-right: 10px;
+    #overview_reviews{
+        display: flex;
+        flex-direction: column;
+        .overview{
+            width: 100%;
+            
+            
+            .addFav{
+                color: $secondaryColor;
+                padding: 10px;
+                border: 1px solid $secondaryColor;
+                border-radius: 13px;
+                display: flex;
+                align-items: center;
+                width: 40%;
+                justify-content: center;
+                i{
+                    margin-right: 10px;
+                }
+            }
+            .synopsis{
+                margin-top: 10px;
+                color: $secondaryColor;
+                h3{
+                    font-size: 2rem;
+                }
+                p{
+                    margin: 10px;
+                    text-indent: 10px;
+                }
+            }
+
+            #trailers{
+                width: 100%;
+                .video{
+                    width: 100%;
+                    padding: 10px;
+                    position: relative;
+                    i{
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        font-size: 3rem;
+                        cursor: pointer;
+                    }
+                    .fa-arrow-left{
+                        left: 20px;
+                    }
+                    .fa-arrow-right{
+                        right: 20px;
+                    }
+                    iframe{
+                        width: 100%;
+                        height: 400px;
+                    }
+                }
             }
         }
-        .synopsis{
-            margin-top: 10px;
-            color: $secondaryColor;
-        }
-    }
-
-    @media only screen and (min-width: 500px){
-        flex-direction: row;
-        .overview{
-            width: 60%;
-        }
         .reviews{
-            width: 40%;
+            width: 100%;
+            color: $secondaryColor;
+            .reviewContainer{
+                max-height: 800px;
+                overflow: auto;
+            }
+            .reviewContainer::-webkit-scrollbar{
+                background-color: #191e24;
+                height: 10px;
+                border-radius: 20px;
+                width: 5px;
+              }
+            .reviewContainer::-webkit-scrollbar-thumb{
+                background-color: #16bbac;
+                border-radius: 20px;
+            }
+            h2{
+                font-size: 2rem;
+            }
+            
+            .review{
+                padding: 20px 0;
+                border-bottom: 1px solid $quinaryColor;
+            }
+        }
+    
+        
+        
+    }
+    @media only screen and (min-width: 800px){
+        #overview_reviews {
+            flex-direction: row;
+            .overview{
+                width: 60%;
+            }
+            .reviews{
+                width: 40%;
+    
+            }
 
         }
     }
