finish movie details 2

--- a/src/styles/details/detailHeader.scss
+++ b/src/styles/details/detailHeader.scss
@@ -35,6 +35,7 @@
         }
         .tagline{
             font-style: italic;
+            margin-bottom: 10px;
         }
         ul{
             list-style-type: none;
