--- a/src/styles/home/showSection/showSection.scss
+++ b/src/styles/home/showSection/showSection.scss
@@ -70,6 +70,10 @@
                 h4{
                     margin: 10px 0;
                 }
+                a{
+                    margin-top: auto;
+
+                }
                 button{
                     background-color: transparent;
                     border-radius: 12px;
@@ -77,7 +81,7 @@
                     padding: 5px 10px;
                     color: $secondaryColor;
                     width: 100%;
-                    margin-top: auto;
+                    
                 }
     
             }
